// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb should render 1`] = `
<Breadcrumb
  className="parent-class"
>
  <nav
    aria-label="Breadcrumb"
    className="parent-class"
  >
    <ol
      className="bx--breadcrumb"
    >
      <BreadcrumbItem
        className="some-class"
        href="www.carbondesignsystem.com"
      >
        <li
          className="bx--breadcrumb-item some-class"
        >
          <Link
            href="www.carbondesignsystem.com"
          >
            <a
              className="bx--link"
              href="www.carbondesignsystem.com"
              rel={null}
            >
              Breadcrumb 1
            </a>
          </Link>
        </li>
      </BreadcrumbItem>
    </ol>
  </nav>
</Breadcrumb>
`;

exports[`Breadcrumb should support rendering the current page 1`] = `
<Breadcrumb>
  <nav
    aria-label="Breadcrumb"
  >
    <ol
      className="bx--breadcrumb"
    >
      <BreadcrumbItem
        href="#a"
      >
        <li
          className="bx--breadcrumb-item"
        >
          <Link
            href="#a"
          >
            <a
              className="bx--link"
              href="#a"
              rel={null}
            >
              A
            </a>
          </Link>
        </li>
      </BreadcrumbItem>
      <BreadcrumbItem
        href="#b"
      >
        <li
          className="bx--breadcrumb-item"
        >
          <Link
            href="#b"
          >
            <a
              className="bx--link"
              href="#b"
              rel={null}
            >
              B
            </a>
          </Link>
        </li>
      </BreadcrumbItem>
      <BreadcrumbItem
        href="#c"
        isCurrentPage={true}
      >
        <li
          className="bx--breadcrumb-item bx--breadcrumb-item--current"
        >
          <Link
            href="#c"
          >
            <a
              className="bx--link"
              href="#c"
              rel={null}
            >
              C
            </a>
          </Link>
        </li>
      </BreadcrumbItem>
    </ol>
  </nav>
</Breadcrumb>
`;

exports[`Breadcrumb should support rendering the current page 2`] = `
<Breadcrumb>
  <nav
    aria-label="Breadcrumb"
  >
    <ol
      className="bx--breadcrumb"
    >
      <BreadcrumbItem
        href="#a"
      >
        <li
          className="bx--breadcrumb-item"
        >
          <Link
            href="#a"
          >
            <a
              className="bx--link"
              href="#a"
              rel={null}
            >
              A
            </a>
          </Link>
        </li>
      </BreadcrumbItem>
      <BreadcrumbItem
        href="#b"
      >
        <li
          className="bx--breadcrumb-item"
        >
          <Link
            href="#b"
          >
            <a
              className="bx--link"
              href="#b"
              rel={null}
            >
              B
            </a>
          </Link>
        </li>
      </BreadcrumbItem>
      <BreadcrumbItem
        aria-current="page"
        href="#c"
      >
        <li
          className="bx--breadcrumb-item"
        >
          <Link
            aria-current="page"
            href="#c"
          >
            <a
              aria-current="page"
              className="bx--link"
              href="#c"
              rel={null}
            >
              C
            </a>
          </Link>
        </li>
      </BreadcrumbItem>
    </ol>
  </nav>
</Breadcrumb>
`;

exports[`Breadcrumb should support rendering without a trailing slash 1`] = `
<Breadcrumb
  noTrailingSlash={true}
>
  <nav
    aria-label="Breadcrumb"
  >
    <ol
      className="bx--breadcrumb bx--breadcrumb--no-trailing-slash"
    >
      <BreadcrumbItem
        href="www.carbondesignsystem.com"
      >
        <li
          className="bx--breadcrumb-item"
        >
          <Link
            href="www.carbondesignsystem.com"
          >
            <a
              className="bx--link"
              href="www.carbondesignsystem.com"
              rel={null}
            >
              Breadcrumb 1
            </a>
          </Link>
        </li>
      </BreadcrumbItem>
    </ol>
  </nav>
</Breadcrumb>
`;
